--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ Thank you sooo much 🤍
 Aap ne har situation mein mujhe support kiya, bohot kuch sikhaya
 aur hamesha meri help ki.
 Allah Pak aapki har wish poori farmaaye —
-bas hamesha khush rahein 💫<br>Many more wishes to you ❤️✨
+bas hamesha khush rahein 💫 Many more wishes to you ❤️✨
                         </h2>
 
                         <div class="imageCute2">
